--- a/tic_tac_toe.vcxproj.filters
+++ b/tic_tac_toe.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="player.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="input.txt">
