--- a/.gitignore
+++ b/.gitignore
@@ -186,4 +186,5 @@ FakesAssemblies/
 # LightSwitch generated files
 GeneratedArtifacts/
 _Pvt_Extensions/
-ModelManifest.xml
+ModelManifest.xml.vs
+.vs
